Add Kubernetes DNS with CoreDNS
This adds Kubernetes DNS with a CoreDNS instance running on the host. This has some distinct advantages over
running it inside a container, like a simplified lifecycle (no state reconciliation) and the possibility of redirecting
all host DNS requests over this instance for observability or central DNSSEC enforcement.

Test Plan: Manually tested (`host kubernetes` in an Alpine container), will be covered by CTS.

X-Origin-Diff: phab/D616
GitOrigin-RevId: 281f5f384f4ef7eba2c3c3190be8e6a89772295c

--- a/core/BUILD
+++ b/core/BUILD
@@ -26,6 +26,9 @@ smalltown_initramfs(
         # Hyperkube
         "//core/cmd/kube": "/kubernetes/bin/kube",
 
+        # CoreDNS
+        "@com_github_coredns_coredns//:coredns": "/kubernetes/bin/coredns",
+
         # runsc/gVisor
         "@com_github_google_gvisor//runsc": "/containerd/bin/runsc",
         "@com_github_google_gvisor_containerd_shim//cmd/containerd-shim-runsc-v1": "/containerd/bin/containerd-shim-runsc-v1",
