--- a/core/pkg/logtree/BUILD.bazel
+++ b/core/pkg/logtree/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
     ],
     importpath = "git.monogon.dev/source/nexantic.git/core/pkg/logtree",
     visibility = ["//visibility:public"],
+    deps = ["//core/pkg/logbuffer:go_default_library"],
 )
 
 go_test(
