logtree: slightly rearrange LeveledPayload/LogEntry
These were in awkward spots, a leftover from the multiple implementation
passes of the logtree implementation.

To make things slightly easier to grok, we move payload.go into
leveled_payload.go, to make it explicitly a subelement of the leveled
part of the LogTree.

We also move LogEntry and its related functions into its own file,
logtree_entry.go, as logtree_access.go was a slightly awkward spot, too.

Test Plan: Refactor, covered by existing tests.

X-Origin-Diff: phab/D651
GitOrigin-RevId: 298d68c91a7cd59059f21ade35ea17f0c9a93cc7

--- a/core/pkg/logtree/BUILD.bazel
+++ b/core/pkg/logtree/BUILD.bazel
@@ -8,10 +8,11 @@ go_library(
         "journal_entry.go",
         "journal_subscriber.go",
         "leveled.go",
+        "leveled_payload.go",
         "logtree.go",
         "logtree_access.go",
+        "logtree_entry.go",
         "logtree_publisher.go",
-        "payload.go",
     ],
     importpath = "git.monogon.dev/source/nexantic.git/core/pkg/logtree",
     visibility = ["//visibility:public"],
