--- a/core/pkg/dhcp4c/BUILD.bazel
+++ b/core/pkg/dhcp4c/BUILD.bazel
@@ -20,7 +20,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["dhcpc_test.go"],
+    srcs = [
+        "dhcpc_test.go",
+        "lease_test.go",
+    ],
     embed = [":go_default_library"],
     pure = "on",
     deps = [
