Disable integrity and encryption for debug builds
This disables disk encryption and integrity when running in the debug profile.
It also makes mkfs.xfs not issue discards as the backend is either a sparse file
(during development) or dm-crypt/dm-integrity which ignores them. In both cases
they are counterproductive and slow things down.

Test Plan: Not exercised by normal tests, manually tested.

X-Origin-Diff: phab/D681
GitOrigin-RevId: 24fae1e3de8d852b414ebd50f3fbe032440683fb

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -8,8 +8,7 @@ go_library(
     visibility = ["//metropolis:__subpackages__"],
 )
 
-# debug_build checks if we're building in debug mode and enables various debug features for the image. Currently this
-# is only used for attaching a Delve debugger to init when it's enabled.
+# debug_build checks if we're building in debug mode and enables various debug features for the image.
 config_setting(
     name = "debug_build",
     values = {
