--- a/metropolis/pkg/devicemapper/BUILD.bazel
+++ b/metropolis/pkg/devicemapper/BUILD.bazel
@@ -4,7 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = ["devicemapper.go"],
     importpath = "git.monogon.dev/source/nexantic.git/metropolis/pkg/devicemapper",
-    visibility = ["//visibility:public"],
+    visibility = ["//metropolis:__subpackages__"],
     deps = [
         "@com_github_pkg_errors//:go_default_library",
         "@com_github_yalue_native_endian//:go_default_library",
