--- a/metropolis/pkg/tpm/eventlog/BUILD.bazel
+++ b/metropolis/pkg/tpm/eventlog/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
         "secureboot.go",
     ],
     importpath = "git.monogon.dev/source/nexantic.git/metropolis/pkg/tpm/eventlog",
-    visibility = ["//visibility:public"],
+    visibility = ["//metropolis:__subpackages__"],
     deps = [
         "//metropolis/pkg/tpm/eventlog/internal:go_default_library",
         "@com_github_google_certificate_transparency_go//x509:go_default_library",
