--- a/metropolis/proto/common/BUILD.bazel
+++ b/metropolis/proto/common/BUILD.bazel
@@ -5,19 +5,19 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 proto_library(
     name = "common_proto",
     srcs = ["common.proto"],
-    visibility = ["//visibility:public"],
+    visibility = ["//metropolis:__subpackages__"],
 )
 
 go_proto_library(
     name = "common_go_proto",
     importpath = "git.monogon.dev/source/nexantic.git/metropolis/proto/common",
     proto = ":common_proto",
-    visibility = ["//visibility:public"],
+    visibility = ["//metropolis:__subpackages__"],
 )
 
 go_library(
     name = "go_default_library",
     embed = [":common_go_proto"],
     importpath = "git.monogon.dev/source/nexantic.git/metropolis/proto/common",
-    visibility = ["//visibility:public"],
+    visibility = ["//metropolis:__subpackages__"],
 )
