--- a/metropolis/test/e2e/k8s_cts/BUILD.bazel
+++ b/metropolis/test/e2e/k8s_cts/BUILD.bazel
@@ -22,7 +22,7 @@ go_image(
     base = ":kubectl_in_path",
     binary = "@io_k8s_kubernetes//test/e2e:_go_default_test-pure",
     pure = "on",
-    visibility = ["//visibility:public"],
+    visibility = ["//metropolis/node:__pkg__"],
 )
 
 go_library(
@@ -51,5 +51,5 @@ go_binary(
         "@com_github_bonzini_qboot//:qboot-bin",
     ],
     embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
+    visibility = ["//visibility:private"],
 )
