ci: build both debug and non-debug builds, add secondary cache
This runs `test //... -c dbg` in addition to `test //...`. Because switching to-and-from the debug configuration causes the local cache to get thrashed, we add a secondary cache via --disk_cache. This should, at some point, be replaced with a proper remote cache instead.

We also drive-by fix a debug build issue.

Fixes T883.

Test Plan: This should test more things in CI now.

Bug: T883

X-Origin-Diff: phab/D688
GitOrigin-RevId: 9c35c4737d6b205a6bc74d50665c37535ac1d5ba

--- a/.bazelrc
+++ b/.bazelrc
@@ -18,3 +18,6 @@ build --cpu=k8
 # Use the default Bazel C++ toolchain to build the tools used during the
 # build.
 build --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+
+# Load CI bazelrc if present.
+try-import %workspace%/ci.bazelrc
