*: bump up Go dependencies
This started off as 'let's bump gVisor'. However, pulling that thread
resulted in quite a few things that also required bumping for the build
to actually work. Here I come back from a day in the Bazel mines,
bearing fruits of my labor.

Notable changes:

 - bump up gVisor
 - bump up containerd
 - bump up Bazel
 - bump up rules_go, rules_docker, Gazelle
 - use google.golang.org/protobuf (the 'new' go proto package)
 - bump up gRPC (but not too much, as go-etcd is still straggling)

Notable effects:

 - new gVisor supports TTY allocation (kubectl run -it
   --image=ubuntu:20.04 ubuntu bash now works!)

Notable notes:

 - gVisor shim has new been rolled into the main gVisor package and is
   slightly easier to build (we can get rid of a bunch of patches).
 - Opencontainers' runtime-specs now follow containerd instead of gVisor
 - gVisor had to be taught to use the slightly newer runtime-specs via a
   new patch.
 - go_rule() in Starlark is now deprecated, and we had to change our
   Starlark rule definitions to use rule() instead. We also had to patch
   gVisor to do that (as there hasn't yet been a release that rolled
   this up).
 - Gazelle now supports different naming schemes for generated Go
   targets - either the old //foo/bar:go_default_library scheme, or a
   new and nicer //foo/bar:bar scheme. We currently force the usage of
   the old scheme, as switching over is probably not going to be easy
   (we use a lot of external Bazel files, and we have to wait for their
   compatibility with the new scheme first).
 - New Bazel/rules_go sets a TMPDIR long enough to generate paths (via
   ioutil.TempDir) to which sockets cannot be bound (108-byte limit).
 - The new protobuf API is incompatible with gogoproto. containerd/ttrpc
   uses gogoproto, but we are smart enough to pull in the old protobuf
   library as gogoproto's transitive dep. However, ttrpc also wants to
   use some proto-generated grpc bits, and that doesn't work. We have to
   

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -38,7 +38,7 @@ node_initramfs(
 
         # runsc/gVisor
         "@com_github_google_gvisor//runsc": "/containerd/bin/runsc",
-        "@com_github_google_gvisor_containerd_shim//cmd/containerd-shim-runsc-v1": "/containerd/bin/containerd-shim-runsc-v1",
+        "@com_github_google_gvisor//shim/v2:containerd-shim-runsc-v1": "/containerd/bin/containerd-shim-runsc-v1",
 
         # runc (runtime in files_cc because of cgo)
         "@com_github_containerd_containerd//cmd/containerd-shim-runc-v2": "/containerd/bin/containerd-shim-runc-v2",
@@ -88,8 +88,8 @@ genrule(
         "//metropolis/node/build/mkimage",
     ],
     visibility = [
-        "//metropolis/test/launch:__subpackages__",
         "//metropolis/test/e2e:__subpackages__",
+        "//metropolis/test/launch:__subpackages__",
     ],
 )
 
@@ -131,8 +131,8 @@ EOF
     cp tpm/ca/signkey.pem $(location tpm/signkey.pem)
     """,
     visibility = [
-        "//metropolis/test/launch:__subpackages__",
         "//metropolis/test/e2e:__subpackages__",
+        "//metropolis/test/launch:__subpackages__",
     ],
 )
 
