third_party: bump Kubernetes to 1.19.7
This... didn't exactly go well. Turns out a change between rc.1 and rc.2
broke our runc runtime by enabling seccomp by default for pod sandboxes.

We work around this by reverting this change, and filing T916 to solve
this soon.

This fixes T910 and T909.

Test Plan: kube bump, CI should run e2e, didn't run CTS.

Bug: T910, T909

X-Origin-Diff: phab/D691
GitOrigin-RevId: 78afca77c294895859e0af9150128d82677d875b

--- a/metropolis/test/e2e/k8s_cts/BUILD.bazel
+++ b/metropolis/test/e2e/k8s_cts/BUILD.bazel
@@ -20,7 +20,7 @@ container_image(
 go_image(
     name = "k8s_cts_image",
     base = ":kubectl_in_path",
-    binary = "@io_k8s_kubernetes//test/e2e:_go_default_test-pure",
+    binary = "@io_k8s_kubernetes//test/e2e:e2e.test",
     pure = "on",
     visibility = ["//metropolis/node:__pkg__"],
 )
