Build mkfs.xfs using rules_cc
This drops the old big genrule for mkfs.xfs and replaces it with a nice rules_cc build system
with the help of bazel_cc_fix generated patches and our musl-based toolchain.
While we're at it I bumped the versions of all related dependencies to their latest stable release.
This also means pulling in ini.h which is a dependency of the new xfstools version.

Instructions to regenerate the patches are included in the spec files.

Toolchain selection is done by the existing transition in our rootfs rule so we automatically get a musl-built
static binary when building for the rootfs.

Test Plan: Tested with E2E tests, should fail fairly catastrophically if something were wrong.

X-Origin-Diff: phab/D708
GitOrigin-RevId: 648a05cdd08cfa84a8a9f4c057c52446e7005631

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -32,7 +32,6 @@ erofs_image(
     ],
     files = {
         "//metropolis/node/core": "/init",
-        "//third_party/xfsprogs:mkfs.xfs": "/bin/mkfs.xfs",
 
         # CA Certificate bundle & os-release & resolv.conf
         # These should not be explicitly used by Metropolis code and are only here for compatibility with
@@ -77,6 +76,7 @@ erofs_image(
     files_cc = {
         # runc runtime, with cgo
         "@com_github_opencontainers_runc//:runc": "/containerd/bin/runc",
+        "@xfsprogs//:mkfs": "/bin/mkfs.xfs",
     },
     symlinks = {
         "/ephemeral/machine-id": "/etc/machine-id",
